@@ -1,3 +1,15 @@
+2000-04-03  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Basic.pm (orac_parse_recipe): Put upper limit on recursion depth
+
+	* Core.pm (orac_process_frame): Modify so that orac_parse_recipe
+	is not called multiple times by this routine since that routine is 
+	now recursive.
+
+	* Basic.pm (orac_parse_recipe): Read recipe primitives and parse
+	using recursion. This is more efficient than reparsing the same
+	recipe multiple times. Automatically ignore POD sections.
+
 2000-03-30  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame/CGS4.pm: Correct pod NAME
